[tool.poetry]
name = "modin-playground"
version = "0.1.0"
description = ""
authors = ["Rob Moore <rob.moore@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pandas-market-calendars = "^3.2"
modin = {extras = ["ray"], version = "^0.12.1"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
